<resources>
    <string name="app_name">Medalmanah</string>

    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>

    <string name="news">Новости</string>
    <string name="tryAgain">Попробывать снова</string>
    <string name="searchEvents">Поиск мероприятий</string>
    <string name="searchLine">Строка поиска</string>
    <string name="searchEventsStart">Дата начала</string>
    <string name="searchEventsEnd">Дата окончания</string>
    <string name="searchEventsSpecializations">Специальность</string>
    <string name="searchEventsLocation">Местоположение</string>
    <string name="searchEventsFilterBtn">Фильтровать</string>
    <string name="selectSpecialities">Выбор специальности</string>
    <string name="selectLocation">Выбор местоположения</string>
    <string name="cancel">Закрыть</string>
    <string name="addSearchParameter">Добавить</string>

    <string-array name="tabs_main">
        <item>Публикации</item>
        <item>Мероприятия</item>
    </string-array>

    <string-array name="type_location">
        <item>Любые</item>
        <item>Российские</item>
        <item>Зарубежные</item>
    </string-array>

    <string-array name="type_publications">
        <item>Статьи</item>
        <item>Новости</item>
    </string-array>


</resources>
