<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/eventSearchLayout"
                app:hintTextAppearance="@style/eventSearchSearchLineLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editSearchEvents"
                    android:hint="@string/searchLine"
                    android:theme="@style/eventSearchSearchLine"
                    tools:hint="@string/searchLine"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/searchEventsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchEventsStart"
                style="@style/eventSearch.start"/>

            <TextView
                android:text="@string/addSearchParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addSearchEventStart"
                style="@style/eventSearch.addParameter"/>

            <TextView
                android:text="@string/searchEventsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchEventsEnd"
                style="@style/eventSearch.end"/>

            <TextView
                android:text="@string/addSearchParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addSearchEventEnd"
                style="@style/eventSearch.addParameter"/>

            <TextView
                android:text="@string/searchEventsSpecializations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchEventsSpecializations"
                style="@style/eventSearch.specializations"/>

            <TextView
                android:text="@string/addSearchParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addSearchEventSpecialities"
                style="@style/eventSearch.addParameter"/>

            <TextView
                android:text="@string/searchEventsLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchEventsLocation"
                style="@style/eventSearch.location"/>

            <TextView
                android:text="@string/addSearchParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addSearchEventLocation"
                style="@style/eventSearch.addParameter"/>

            <FrameLayout
                android:layout_marginTop="@dimen/searchEventsFilterMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnEventsFilter"
                    android:paddingTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/searchEventsFilterBtnWidth"
                    android:layout_height="@dimen/searchEventsFilterBtnHeight"
                    android:text="@string/searchEventsFilterBtn"
                    style="@style/eventSearch.filterBtn" />
            </FrameLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>